# poetry-python-downgrader

./: Dockerfile  README.md  action.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml
poetry_python_downgrader/: __init__.py  cli.py  downgrader.py  gh_actions_cli.py  pypi.py  read_toml.py
tests/: test_cli.py  test_downgrader.py  test_end_to_end.py  test_pypi.py  test_read_toml.py
